Added auth and cost check
